[project]
name = "earthaccess-keyring"
requires-python = ">= 3.12"
license = { text = "MIT" }
dependencies = [
  "earthaccess",
  "keyring",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["earthaccess_keyring"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "docs",
]
target-version = "py312"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # tidy imports
]
ignore = [
  "E402",  # E402: module level import not at top of file
  "E501",  # E501: line too long - let black worry about that
  "E731",  # E731: do not assign a lambda expression, use a def
  "UP007", # UP007: use X | Y in isinstance checks instead of tuples
]
fixable = ["I"]
extend-safe-fixes = [
  "TID252", # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["earthaccess_keyring"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
